Social Media Icons + New BG color

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Akshit Aggarwal</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/59eba57f6c.js" crossorigin="anonymous"></script>
     <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -15,10 +16,20 @@
     <div id="top" class="header">
         <div class="vert-text">
             <img class="dp" src="./img/face.jpg">
-            <div class="col-md-12">Hey, thanks for popping by!</div>
-            <div class="col-md-12">I'm Akshit</div>
+            <div class="col-md-12">Hi! I'm Akshit. I work with data.</div>
+            <div class="col-md-12">My interests lie within Computer Vision and Data Viz!</div>
             <br>
-            <div class="col-md-12"><a href="https://www.linkedin.com/in/akshitx10/">li</a> | <a href="https://github.com/akshitaggarwal">gh</a> | <a href="https://www.facebook.com/akshitx10">fb</a></div>
+            <div class="col-md-12">
+                <a href="https://www.linkedin.com/in/akshitx10/" class="socials" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a> | 
+                <a href="https://github.com/akshitaggarwal/" class="socials" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a> | 
+                <a href="https://www.facebook.com/akshitx10/" class="socials" target="_blank">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+            </div>
         </div>
     </div>
     <!-- JavaScript -->
