--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <br>
             <div class="col-md-12">
                 <a href="https://www.linkedin.com/in/akshitx10/" class="socials" target="_blank">
-                    <i class="fab fa-linkedin"></i>
+                    <i class="fab fa-linkedin-in"></i>
                 </a> | 
                 <a href="https://github.com/akshitaggarwal/" class="socials" target="_blank">
                     <i class="fab fa-github"></i>
                 </a> | 
-                <a href="https://www.facebook.com/akshitx10/" class="socials" target="_blank">
-                    <i class="fab fa-facebook-f"></i>
+                <a href="https://twitter.com/_akshitaggarwal/" class="socials" target="_blank">
+                    <i class="fab fa-twitter"></i>
                 </a>
             </div>
         </div>
